--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Eliza Dawson"
   pronouns         : # example: "she/her"  
   bio              : |
-    Integrative Polar Geoscience
-    NOAA C&GC Postdoc Fellow
+    Integrative Polar Geoscience<br>
+    <a href="https://cpaess.ucar.edu/cgc/class-34" target="_blank">NOAA C&GC Postdoc Fellow</a>
   location         : # "Earth"
   employer         : "UCAR/Georgia Tech"
   uri              : # URL
