--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Selected Journal Articles'    
+    title: 'Recent Journal Articles'    
   conferences:
     title: 'Conference Papers'
 
