--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Eliza Dawson"
 title_separator          : "-"
-name                     : &name "Dr. Eliza Dawson"
+name                     : &name "Eliza Dawson, PhD"
 description              : &description "personal description"
 url                      : https://elizadawson.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,7 +22,7 @@ repository               : "elizadawson/elizadawson.github.io"
 author:
   # Biographic information
   avatar           : "headshot.png"
-  name             : "Eliza Dawson"
+  name             : "Eliza Dawson, PhD"
   pronouns         : # example: "she/her"  
   bio              : |
     Integrative Polar Geoscience<br>
