--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Eliza Dawson, PhD"
   pronouns         : # example: "she/her"  
   bio              : |
-    Polar Geoscience and Geophysics<br>
+    Glaciology, Geophysics, Climate <br>
     <a href="https://cpaess.ucar.edu/cgc/class-34" target="_blank">NOAA C&GC Postdoc Fellow</a>
   location         : # "Earth"
   employer         : "UCAR/Georgia Tech"
@@ -34,7 +34,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=Z-eihO0AAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=IKPpgXIAAAAJ&hl=en&oi=ao"
   impactstory      : # URL
   orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
