--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : eliza-dawson-a3aaa4120
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -67,7 +67,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : keepingicecool
+  twitter          : # keepingicecool
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
