--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Eliza Dawson, PhD"
   pronouns         : # example: "she/her"  
   bio              : |
-    Projecting ice sheet evolution with geophysical imaging and simulation. <br>
+    Projecting ice sheet evolution with geophysical imaging and modeling. <br>
     <a href="https://cpaess.ucar.edu/cgc/class-34" target="_blank">NOAA C&GC Postdoc Fellow</a>
   location         : # "Earth"
   employer         : "UCAR/Georgia Tech"
